# Apollo-Punch-Bot

./: .gitignore  README-Dev.md  README.md  common.resource  correct-punch-clock.robot  dockerfile  punch-clock.robot  pyproject.toml
.github/workflows/: basic-test.yml
apollo-punch-bot/: common.resource  punch-clock.robot
config/: user.config.example
config/holidays/: 2023.txt  2024.txt
src/: 2fa_utility.robot  common.resource  correct-punch-clock.robot  date_provider.py  punch-clock.robot
test/: test.robot
test/data/: 2023_working_day_in_apollo_format.txt  2024_working_day.txt
