[tool.poetry]
name = "apollo-punch-bot"
version = "0.1.0"
description = ""
authors = ["Clark Chiu <clark_chiu@trendmicro.com>"]

[tool.poetry.dependencies]
python = "^3.10"
robotframework = "^5.0.1"
robotframework-browser = "^13.4.0"
pandas = "^1.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
